updates to the styling, changing the broken image, fixing the spacing of the gift cards, adding a nav bar for cleanliness

--- a/web/src/components/CheckoutDrawer/CheckoutDrawer.css
+++ b/web/src/components/CheckoutDrawer/CheckoutDrawer.css
@@ -45,3 +45,9 @@
   margin-left: 5%;
   line-height: 3.5vw
 }
+
+.null-state {
+  width: 500px;
+  margin-top: 30%;
+  margin-left: 35%;
+}
